Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -817,6 +817,14 @@
 </tr>
 <tr align=center>
 	<td>John Coltrane</td>
+	<td>My Favorite Things</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>John Coltrane</td>
 	<td>Africa/Brass</td>
 	<td>12 Inch</td>
 	<td>Black</td>
@@ -1377,7 +1385,7 @@
 </tr>
 <tr align=center>
 	<td>Pharoah Sanders</td>
-	<td>Oh Lord, Let Me Do No Wrong</td>
+	<td><a href="https://www.discogs.com/release/1804661-Pharoah-Sanders-Oh-Lord-Let-Me-Do-No-Wrong">Oh Lord, Let Me Do No Wrong</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -2144,6 +2152,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Various Artists</td>
+	<td><a href="https://www.discogs.com/release/13725499-Leon-Thomas-T-Bone-Walker-Eddie-Cleanhead-Vinson-Joe-Turner-Super-Black-Blues-Volume-II">Super Black Blues: Volume II</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>VHS or Beta</td>
 	<td>Night on Fire</td>
 	<td>12 Inch</td>
@@ -2258,7 +2274,7 @@
 </table>
 <br>
 <div id="text">
-Total: 279
+Total: 281
 <br>
 Last Updated: 2022-07-30
 </div>
