Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -817,7 +817,7 @@
 </tr>
 <tr align=center>
 	<td>John Coltrane</td>
-	<td>My Favorite Things</td>
+	<td><a href="https://www.discogs.com/release/6273000-John-Coltrane-My-Favorite-Things">My Favorite Things</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
