Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -184,6 +184,14 @@
 	<td></td>
 </tr>
 <tr align=center>
+	<td>The Beatles</td>
+	<td>Let It Be</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td></td>
+</tr>
+<tr align=center>
 	<td>Bell Orchestre</td>
 	<td><a href="https://www.discogs.com/Bell-Orchestre-Recording-A-Tape-The-Colour-Of-The-Light/release/1776229">Recording a Tape the Colour of the Light</a></td>
 	<td>12 Inch</td>
@@ -294,6 +302,14 @@
 	<td>Translucent Green</td>
 	<td>Single</td>
 	<td>103 out of 500</td>
+</tr>
+<tr align=center>
+	<td>Carlos Santana & Mahavishnu John McLaughlin</td>
+	<td>Love Devotion Surrender</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
 </tr>
 <tr align=center>
 	<td>Caspian</td>
@@ -458,6 +474,14 @@
 <tr align=center>
 	<td>Don Caballero</td>
 	<td>For Respect</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Don Cherry</td>
+	<td>Where Is Brooklyn?</td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -856,6 +880,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>John Coltrane</td>
+	<td>Live in Seattle</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>John Coltrane/Archie Shepp</td>
 	<td>New Thing at Newport</td>
 	<td>12 Inch</td>
@@ -918,6 +950,14 @@
 	<td>Blue</td>
 	<td>LP</td>
 	<td>Limited to 1000</td>
+</tr>
+<tr align=center>
+	<td>Kikagaku Moyo</td>
+	<td><a href="https://www.discogs.com/release/23803718-Kikagaku-Moyo-Kumoyo-Island">Kumoyo Island</a></td>
+	<td>12 Inch</td>
+	<td>Orange</td>
+	<td>LP</td>
+	<td>Limited to 6000</td>
 </tr>
 <tr align=center>
 	<td>The Killers</td>
@@ -1101,6 +1141,14 @@
 	<td>12 Inch</td>
 	<td>Clear</td>
 	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>McCoy Tyner</td>
+	<td>Horizon</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
 	<td>-</td>
 </tr>
 <tr align=center>
@@ -1362,6 +1410,14 @@
 <tr align=center>
 	<td>Pharoah Sanders</td>
 	<td><a href="https://www.discogs.com/Pharoah-Sanders-Jewels-Of-Thought/release/11100557">Jewels of Thought</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Pharoah Sanders & Norman Connors</td>
+	<td><a href="https://www.discogs.com/release/1261926-Pharoah-Sanders-Norman-Connors-Beyond-A-Dream">Beyond a Drfeam</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -1706,6 +1762,22 @@
 <tr align=center>
 	<td>Shakti</td>
 	<td>Shakti with John McLaughlin</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Shakti</td>
+	<td>A Handful of Beauty</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Shakti</td>
+	<td>Natural Elements</td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -2274,9 +2346,9 @@
 </table>
 <br>
 <div id="text">
-Total: 281
+Total: 290
 <br>
-Last Updated: 2022-07-30
+Last Updated: 2022-09-05
 </div>
 <br>
 </div>
