Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -504,6 +504,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Ed Kelly</td>
+	<td><a href="https://www.discogs.com/release/16516953-Ed-Kelly-Friend-Ed-Kelly-Friend">Ed Kelly & Friend</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Efrim Menuck</td>
 	<td>Plays "High Gospel"</td>
 	<td>12 Inch</td>
@@ -1421,6 +1429,14 @@
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Pharoah Sanders</td>
+	<td><a href="https://www.discogs.com/release/2524201-Pharoah-Sanders-Rejoice">Rejoice</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>Double LP</td>
 	<td>-</td>
 </tr>
 <tr align=center>
@@ -2346,9 +2362,9 @@
 </table>
 <br>
 <div id="text">
-Total: 290
+Total: 292
 <br>
-Last Updated: 2022-09-05
+Last Updated: 2022-09-25
 </div>
 <br>
 </div>
