Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1771,6 +1771,14 @@
 	<td>No</td>
 	<td>Fiona, Nathan, and Sara</td>
 </tr>
+<tr align=center>
+	<td>Kikagaku Moyo</td>
+	<td>(skipped)</td>
+	<td>2022-09-25</td>
+	<td>The Warfield Theatre; San Francisco, CA, US</td>
+	<td>No</td>
+	<td>Fiona, Nathan, and Sara</td>
+</tr>
 </table>
 <br>
 </div>
