--- a/records/index.html
+++ b/records/index.html
@@ -1425,7 +1425,7 @@
 </tr>
 <tr align=center>
 	<td>Pharoah Sanders & Norman Connors</td>
-	<td><a href="https://www.discogs.com/release/1261926-Pharoah-Sanders-Norman-Connors-Beyond-A-Dream">Beyond a Drfeam</a></td>
+	<td><a href="https://www.discogs.com/release/1261926-Pharoah-Sanders-Norman-Connors-Beyond-A-Dream">Beyond a Dream</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
