Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -1424,6 +1424,22 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Pharoah Sanders</td>
+	<td>Izipho Zam (My Gifts)</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Pharoah Sanders</td>
+	<td>Journey to the One</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Pharoah Sanders & Norman Connors</td>
 	<td><a href="https://www.discogs.com/release/1261926-Pharoah-Sanders-Norman-Connors-Beyond-A-Dream">Beyond a Dream</a></td>
 	<td>12 Inch</td>
@@ -2362,9 +2378,9 @@
 </table>
 <br>
 <div id="text">
-Total: 292
+Total: 294
 <br>
-Last Updated: 2022-09-25
+Last Updated: 2022-11-08
 </div>
 <br>
 </div>
