Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -32,13 +32,20 @@
 </tr>
 <tr align=center>
 	<td>Alice Coltrane</td>
+	<td><a href="https://www.discogs.com/release/25109896-Alice-Coltrane-Featuring-Pharoah-Sanders-And-Joe-Henderson-PtahEl-Daoud">Ptah, the El Daoud</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Alice Coltrane</td>
 	<td>Journey in Satchidananda</td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
 	<td>-</td>
 </tr>
-
 <tr align=center>
 	<td>All Tiny Creatures</td>
 	<td>Segni EP</td>
@@ -1120,6 +1127,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Mastodon</td>
+	<td><a href="https://www.discogs.com/release/22981619-Mastodon-Remission">Remission</a></td>
+	<td>12 Inch</td>
+	<td>Gold</td>
+	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Max Richter</td>
 	<td>The Blue Notebooks</td>
 	<td>12 Inch</td>
@@ -1565,6 +1580,14 @@
 	<td>10 Inch</td>
 	<td>Black</td>
 	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+    <td>Rahsaan Roland Kirk</td>
+	<td><a href="https://www.discogs.com/release/25295341-Rahsaan-Roland-Kirk-Blacknuss">Blacknuss</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
 	<td>-</td>
 </tr>
 <tr align=center>
