Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -1088,6 +1088,14 @@
 </tr>
 <tr align=center>
 	<td>Leon Thomas</td>
+	<td>The Leon Thomas Album</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Leon Thomas</td>
 	<td>Facets - The Legend of Leon Thomas</td>
 	<td>12 Inch</td>
 	<td>Black</td>
@@ -2401,9 +2409,9 @@
 </table>
 <br>
 <div id="text">
-Total: 297
+Total: 298
 <br>
-Last Updated: 2022-11-08
+Last Updated: 2022-12-15
 </div>
 <br>
 </div>
