Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -1103,6 +1103,22 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Leon Thomas</td>
+	<td>Blues and the Soulful Truth	</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Leon Thomas</td>
+	<td>Full Circle</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Lymbyc Systym</td>
 	<td>Love Your Abuser</td>
 	<td>12 Inch</td>
@@ -1440,6 +1456,14 @@
 </tr>
 <tr align=center>
 	<td>Pharoah Sanders</td>
+	<td><a href="https://www.discogs.com/release/25484281-Pharoah-Sanders-Karma">Karma</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Pharoah Sanders</td>
 	<td><a href="https://www.discogs.com/Pharoah-Sanders-Jewels-Of-Thought/release/11100557">Jewels of Thought</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
@@ -1588,6 +1612,14 @@
 	<td>10 Inch</td>
 	<td>Black</td>
 	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+    <td>Roland Kirk</td>
+	<td>Here Comes the Whistleman</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
 	<td>-</td>
 </tr>
 <tr align=center>
@@ -2409,9 +2441,9 @@
 </table>
 <br>
 <div id="text">
-Total: 298
+Total: 302
 <br>
-Last Updated: 2022-12-15
+Last Updated: 2023-02-04
 </div>
 <br>
 </div>
