Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1779,6 +1779,14 @@
 	<td>No</td>
 	<td>Fiona, Nathan, and Sara</td>
 </tr>
+<tr align=center>
+	<td>Kassa Overall</td>
+	<td>-</td>
+	<td>2023-02-16</td>
+	<td>Black Cat; San Francisco, CA, US</td>
+	<td>No</td>
+	<td>Sara</td>
+</tr>
 </table>
 <br>
 </div>
