Updated record list

--- a/records/index.html
+++ b/records/index.html
@@ -503,6 +503,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Earnest Jackson and Sugar Daddy and the Gumbo Roux</td>
+	<td>Inflation</td>
+	<td>7 Inch</td>
+	<td>Black</td>
+	<td>Single</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Earth</td>
 	<td>The Bees Made Honey in the Lion's Skull</td>
 	<td>12 Inch</td>
@@ -767,6 +775,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Herbie Mann</td>
+	<td>Hold On, I'm Comin'</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>If These Trees Could Talk</td>
 	<td>If These Trees Could Talk</td>
 	<td>12 Inch</td>
@@ -905,6 +921,14 @@
 <tr align=center>
 	<td>John Coltrane/Archie Shepp</td>
 	<td>New Thing at Newport</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Johnny Hodges with Leon Thomas and Oliver Nelson</td>
+	<td>3 Shades of Blue</td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -1527,6 +1551,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Pharoah Sanders & Bill Laswell</td>
+	<td>With a Heartbeat</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Pixies</td>
 	<td><a href="https://www.discogs.com/Pixies-Surfer-Rosa/release/10705401">Surfer Rosa</a></td>
 	<td>12 Inch</td>
@@ -1607,6 +1639,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+    <td>The Pyramids</td>
+	<td>King of Kings</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
     <td>Radiohead</td>
 	<td>Kid A</td>
 	<td>10 Inch</td>
@@ -1625,6 +1665,22 @@
 <tr align=center>
     <td>Rahsaan Roland Kirk</td>
 	<td><a href="https://www.discogs.com/release/25295341-Rahsaan-Roland-Kirk-Blacknuss">Blacknuss</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+    <td>Rahsaan Roland Kirk</td>
+	<td>Boogie-Woogie String Along for Real	</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+    <td>Roland Kirk</td>
+	<td>Live in Paris, 1970 Vol. 2</td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -2441,9 +2497,9 @@
 </table>
 <br>
 <div id="text">
-Total: 302
+Total: 309
 <br>
-Last Updated: 2023-02-04
+Last Updated: 2023-06-12
 </div>
 <br>
 </div>
