Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1787,6 +1787,14 @@
 	<td>No</td>
 	<td>Sara</td>
 </tr>
+<tr align=center>
+	<td>Tribute to Pharoah Sanders & Joey DeFrancesco (Azar Lawrence, Gary Bartz, Billy Hart, Marc Cary, Munyungo Jackson, Brian Ho, Nicolas Bearde, Marcus Shelby, Tomoki Sanders)</td>
+	<td>Joel Ross’ Good Vibes</td>
+	<td>2023-06-23</td>
+	<td>Healdsburg Jazz Festival, Bacchus Landing; Healdsburg, CA, US</td>
+	<td>No</td>
+	<td>Sara</td>
+</tr>
 </table>
 <br>
 </div>
