Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1795,6 +1795,14 @@
 	<td>No</td>
 	<td>Sara</td>
 </tr>
+<tr align=center>
+	<td>Sun Ra Arkestra (ealry show)</td>
+	<td>-</td>
+	<td>2023-07-02</td>
+	<td>Nublu; New York, NY, US</td>
+	<td>No</td>
+	<td>-</td>
+</tr>
 </table>
 <br>
 </div>
