Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1803,6 +1803,22 @@
 	<td>No</td>
 	<td>-</td>
 </tr>
+<tr align=center>
+	<td>Chief Adjuah (formerly Christian Scott) (early show)</td>
+	<td>-</td>
+	<td>2023-07-14</td>
+	<td>Yoshi's; Oakland, CA, US</td>
+	<td>No</td>
+	<td>Sara</td>
+</tr>
+<tr align=center>
+	<td>Dead & Company</td>
+	<td>-</td>
+	<td>2023-07-15</td>
+	<td>Oracle Park; San Francisco, CA, US</td>
+	<td>No</td>
+	<td>Alex</td>
+</tr>
 </table>
 <br>
 </div>
