Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1816,8 +1816,24 @@
 	<td>-</td>
 	<td>2023-07-15</td>
 	<td>Oracle Park; San Francisco, CA, US</td>
-	<td>No</td>
+	<td><a href="https://archive.org/details/deadco2023-07-15" target="_blank">Yes</a></td>
 	<td>Alex</td>
+</tr>
+<tr align=center>
+	<td>Sun Ra Arkestra</td>
+	<td>-</td>
+	<td>2023-07-21</td>
+	<td>SFJAZZ Center; San Francisco, CA, US</td>
+	<td>No</td>
+	<td>Eric, Fiona, Jeff, Nathan, Sara</td>
+</tr>
+<tr align=center>
+	<td>Sun Ra Arkestra</td>
+	<td>-</td>
+	<td>2023-07-22</td>
+	<td>SFJAZZ Center; San Francisco, CA, US</td>
+	<td>No</td>
+	<td>Eric</td>
 </tr>
 </table>
 <br>
