--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1825,7 +1825,7 @@
 	<td>2023-07-21</td>
 	<td>SFJAZZ Center; San Francisco, CA, US</td>
 	<td>No</td>
-	<td>Eric, Fiona, Jeff, Nathan, Sara</td>
+	<td>Eric, Fiona, Jeff, Nathan, and Sara</td>
 </tr>
 <tr align=center>
 	<td>Sun Ra Arkestra</td>
