--- a/records/index.html
+++ b/records/index.html
@@ -815,6 +815,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td><a href="https://www.discogs.com/release/28065504-Jaimie-Branch-Fly-Or-Die-Fly-Or-Die-Fly-Or-Die-World-War">Jaimie Branch</a></td>
+	<td>Fly or Die Fly or Die Fly or Die (World War)</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>James Iha</td>
 	<td><a href="https://www.discogs.com/James-Iha-Be-Strong-Now/release/2900351">Be Strong Now</a></td>
 	<td>12 Inch</td>
@@ -1496,10 +1504,26 @@
 </tr>
 <tr align=center>
 	<td>Pharoah Sanders</td>
+	<td>Black Unity</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Pharoah Sanders</td>
 	<td>Izipho Zam (My Gifts)</td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Pharoah Sanders</td>
+	<td><a href="https://www.discogs.com/release/28263040-Pharoah-Sanders-Pharoah">Pharoah</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>Double LP</td>
 	<td>-</td>
 </tr>
 <tr align=center>
@@ -1536,6 +1560,14 @@
 </tr>
 <tr align=center>
 	<td>Pharoah Sanders</td>
+	<td>Shukuru</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Pharoah Sanders</td>
 	<td><a href="https://www.discogs.com/release/22956734-Pharoah-Sanders-John-Hicks-Curtis-Lundy-Idris-Muhammad-Africa">Africa</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
@@ -1553,6 +1585,14 @@
 <tr align=center>
 	<td>Pharoah Sanders & Bill Laswell</td>
 	<td>With a Heartbeat</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Pharoah Sanders</td>
+	<td>Live in Paris (1975) (Lost ORTF Recordings)</td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -2497,10 +2537,9 @@
 </table>
 <br>
 <div id="text">
-Total: 309
+Total: 314
 <br>
-Last Updated: 2023-06-12
-</div>
+Last Updated: 2023-10-22
 <br>
 </div>
 
