Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1768,7 +1768,7 @@
 	<td>Midnight North</td>
 	<td>2022-08-14</td>
 	<td>Stern Grove Festival; San Francisco, CA, US</td>
-	<td>No</td>
+	<td><a href="https://archive.org/details/paf2022-08-14" target="_blank">Yes</a></td>
 	<td>Fiona, Nathan, and Sara</td>
 </tr>
 <tr align=center>
@@ -1834,6 +1834,22 @@
 	<td>SFJAZZ Center; San Francisco, CA, US</td>
 	<td>No</td>
 	<td>Eric</td>
+</tr>
+<tr align=center>
+	<td>Bobby Weir & Wolf Bros Featuring the Wolfpack with the Stanford Symphony Orchestra</td>
+	<td>-</td>
+	<td>2023-10-29</td>
+	<td>Frost Amphitheater; Stanford, CA, US</td>
+	<td><a href="https://archive.org/details/bw2023-10-29.481.m148.F8nPro.2496" target="_blank">Yes</a></td>
+	<td>Nathan</td>
+</tr>
+<tr align=center>
+	<td>Phil Lesh & Friends</td>
+	<td>-</td>
+	<td>2023-11-03</td>
+	<td>The Fillmore; San Francisco, CA, US</td>
+	<td>No</td>
+	<td>-</td>
 </tr>
 </table>
 <br>
