--- a/records/index.html
+++ b/records/index.html
@@ -807,16 +807,16 @@
 	<td>Limited to 200</td>
 </tr>
 <tr align=center>
-	<td><a href="https://www.discogs.com/Iron-Wine-The-Creek-Drank-The-Cradle/release/10783971">Iron & Wine</a></td>
-	<td>The Creek Drank the Cradle</td>
+	<td>Iron & Wine</td>
+	<td><a href="https://www.discogs.com/Iron-Wine-The-Creek-Drank-The-Cradle/release/10783971">The Creek Drank the Cradle</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
 	<td>-</td>
 </tr>
 <tr align=center>
-	<td><a href="https://www.discogs.com/release/28065504-Jaimie-Branch-Fly-Or-Die-Fly-Or-Die-Fly-Or-Die-World-War">Jaimie Branch</a></td>
-	<td>Fly or Die Fly or Die Fly or Die (World War)</td>
+	<td>Jaimie Branch</td>
+	<td><a href="https://www.discogs.com/release/28065504-Jaimie-Branch-Fly-Or-Die-Fly-Or-Die-Fly-Or-Die-World-War">Fly or Die Fly or Die Fly or Die (World War)</a></td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
