Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1848,7 +1848,23 @@
 	<td>-</td>
 	<td>2023-11-03</td>
 	<td>The Fillmore; San Francisco, CA, US</td>
+	<td><a href="https://archive.org/details/paf2023-11-03" target="_blank">Yes</a></td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Phil Lesh & Friends</td>
+	<td>-</td>
+	<td>2023-12-15</td>
+	<td>The Fillmore; San Francisco, CA, US</td>
 	<td>No</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Phil Lesh & Friends</td>
+	<td>-</td>
+	<td>2024-01-13</td>
+	<td>The Warfield Theatre; San Francisco, CA, US</td>
+	<td><a href="https://archive.org/details/paf2024-01-13" target="_blank">Yes</a></td>
 	<td>-</td>
 </tr>
 </table>
