--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1867,6 +1867,14 @@
 	<td><a href="https://archive.org/details/paf2024-01-13" target="_blank">Yes</a></td>
 	<td>-</td>
 </tr>
+<tr align=center>
+	<td>Yo La Tengo</td>
+	<td>-</td>
+	<td>2024-02-09</td>
+	<td>The Fillmore; San Francisco, CA, US</td>
+	<td>No</td>
+	<td>Sara</td>
+</tr>
 </table>
 <br>
 </div>
