Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1796,7 +1796,7 @@
 	<td>Sara</td>
 </tr>
 <tr align=center>
-	<td>Sun Ra Arkestra (ealry show)</td>
+	<td>Sun Ra Arkestra (early show)</td>
 	<td>-</td>
 	<td>2023-07-02</td>
 	<td>Nublu; New York, NY, US</td>
@@ -1871,6 +1871,14 @@
 	<td>Yo La Tengo</td>
 	<td>-</td>
 	<td>2024-02-09</td>
+	<td>The Fillmore; San Francisco, CA, US</td>
+	<td>No</td>
+	<td>Sara</td>
+</tr>
+<tr align=center>
+	<td>Phil Lesh & Friends</td>
+	<td>-</td>
+	<td>2024-02-14</td>
 	<td>The Fillmore; San Francisco, CA, US</td>
 	<td>No</td>
 	<td>Sara</td>
