Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1907,6 +1907,14 @@
 	<td>No</td>
 	<td>-</td>
 </tr>
+<tr align=center>
+	<td>Phil Lesh & Friends</td>
+	<td>-</td>
+	<td>2024-05-09</td>
+	<td>The Warfield Theatre; San Francisco, CA, US</td>
+	<td><a href="https://archive.org/details/paf2024-05-09" target="_blank">Yes</a></td>
+	<td>-</td>
+</tr>
 </table>
 <br>
 </div>
