Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1915,6 +1915,22 @@
 	<td><a href="https://archive.org/details/paf2024-05-09" target="_blank">Yes</a></td>
 	<td>-</td>
 </tr>
+<tr align=center>
+	<td>Dead & Company</td>
+	<td>-</td>
+	<td>2024-05-25</td>
+	<td>The Sphere; Las Vegas, NV, US</td>
+	<td><a href="https://archive.org/details/deadco2024-05-25.Rainbowtoez.Shell" target="_blank">Yes</a></td>
+	<td>Alex, Jenni, and Sara</td>
+</tr>
+<tr align=center>
+	<td>Dead & Company</td>
+	<td>-</td>
+	<td>2024-05-26</td>
+	<td>The Sphere; Las Vegas, NV, US</td>
+	<td><a href="https://archive.org/details/deadco2024-05-26.Rainbowtoez.Shell" target="_blank">Yes</a></td>
+	<td>Alex</td>
+</tr>
 </table>
 <br>
 </div>
