--- a/records/index.html
+++ b/records/index.html
@@ -1128,6 +1128,14 @@
 </tr>
 <tr align=center>
 	<td>Leon Thomas</td>
+	<td>Leon Thomas In Berlin</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Leon Thomas</td>
 	<td>Facets - The Legend of Leon Thomas</td>
 	<td>12 Inch</td>
 	<td>Black</td>
@@ -1497,6 +1505,14 @@
 <tr align=center>
 	<td>Pharoah Sanders</td>
 	<td><a href="https://www.discogs.com/Pharoah-Sanders-Jewels-Of-Thought/release/11100557">Jewels of Thought</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Pharoah Sanders</td>
+	<td>Jewels of Thought</td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
@@ -2539,7 +2555,7 @@
 <div id="text">
 Total: 314
 <br>
-Last Updated: 2023-10-22
+Last Updated: 2024-09-22
 <br>
 </div>
 
