--- a/records/index.html
+++ b/records/index.html
@@ -1512,7 +1512,7 @@
 </tr>
 <tr align=center>
 	<td>Pharoah Sanders</td>
-	<td>Jewels of Thought</td>
+	<td>Thembi</td>
 	<td>12 Inch</td>
 	<td>Black</td>
 	<td>LP</td>
