Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1880,7 +1880,7 @@
 	<td>-</td>
 	<td>2024-02-14</td>
 	<td>The Fillmore; San Francisco, CA, US</td>
-	<td>No</td>
+	<td><a href="https://archive.org/details/20240228_20240228_1930/Phil+Lesh+%26+Friends2024-02-14.+Fillmore+%3B+SF%2CCA.flac16/07.+Sugar+Magnolia+.flac" target="_blank">Yes</a></td>
 	<td>Sara</td>
 </tr>
 <tr align=center>
@@ -1930,6 +1930,14 @@
 	<td>The Sphere; Las Vegas, NV, US</td>
 	<td><a href="https://archive.org/details/deadco2024-05-26.Rainbowtoez.Shell" target="_blank">Yes</a></td>
 	<td>Alex</td>
+</tr>
+<tr align=center>
+	<td>Alex Jordan & Friends</td>
+	<td>-</td>
+	<td>2024-10-31</td>
+	<td>Fox Theatre; Redwood City, CA, US</td>
+	<td>No</td>
+	<td>-</td>
 </tr>
 </table>
 <br>
