Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1939,6 +1939,14 @@
 	<td>No</td>
 	<td>-</td>
 </tr>
+<tr align=center>
+	<td>Bobby Weir & Wolf Bros Featuring the Wolfpack with the Chicago Philharmonic</td>
+	<td>-</td>
+	<td>2024-11-17</td>
+	<td>Auditorium Theatre; Chicago, IL, US</td>
+	<td><a href="https://archive.org/details/bw2023-10-29.481.m148.F8nPro.2496" target="_blank">Yes</a></td>
+	<td>Dad and Eric</td>
+</tr>
 </table>
 <br>
 </div>
