Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -67,7 +67,7 @@
 	<td>2005-03-18</td>
 	<td>8th Note Coffeehouse; Milwaukee, WI, US</td>
 	<td>No</td>
-	<td>Dyan, Kevin, and Paul (Dad)</td>
+	<td>Dad, Dyan, and Kevin</td>
 </tr>
 <tr align=center>
 	<td>The Shins</td>
@@ -1936,7 +1936,7 @@
 	<td>-</td>
 	<td>2024-10-31</td>
 	<td>Fox Theatre; Redwood City, CA, US</td>
-	<td>No</td>
+	<td><a href="https://archive.org/details/ajf2024-10-31.sbd.jenkins.richteratmosphere.flac24" target="_blank">Yes</a></td>
 	<td>-</td>
 </tr>
 <tr align=center>
@@ -1944,7 +1944,7 @@
 	<td>-</td>
 	<td>2024-11-17</td>
 	<td>Auditorium Theatre; Chicago, IL, US</td>
-	<td><a href="https://archive.org/details/bw2023-10-29.481.m148.F8nPro.2496" target="_blank">Yes</a></td>
+	<td><a href="https://archive.org/details/bwwb2024-11-17.bwwb2024-11-17" target="_blank">Yes</a></td>
 	<td>Dad and Eric</td>
 </tr>
 </table>
