Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1947,6 +1947,14 @@
 	<td><a href="https://archive.org/details/bwwb2024-11-17.bwwb2024-11-17" target="_blank">Yes</a></td>
 	<td>Dad and Eric</td>
 </tr>
+<tr align=center>
+	<td>Dark Star Orchestra</td>
+	<td>-</td>
+	<td>2025-02-08</td>
+	<td>The Fox Theater; Oakland, CA, US</td>
+	<td>No</td>
+	<td>-</td>
+</tr>
 </table>
 <br>
 </div>
