Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1955,6 +1955,14 @@
 	<td>No</td>
 	<td>-</td>
 </tr>
+<tr align=center>
+	<td>Melvin Seals and JGB</td>
+	<td>Sam Grisman Project</td>
+	<td>2025-02-22</td>
+	<td>The Warfield Theatre; San Francisco, CA, US</td>
+	<td>No</td>
+	<td>-</td>
+</tr>
 </table>
 <br>
 </div>
