Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1963,6 +1963,30 @@
 	<td>No</td>
 	<td>-</td>
 </tr>
+<tr align=center>
+	<td>Dead & Company</td>
+	<td>-</td>
+	<td>2025-04-24</td>
+	<td>The Sphere; Las Vegas, NV, US</td>
+	<td><a href="https://archive.org/details/deadco2025-04-24.stelladew" target="_blank">Yes</a></td>
+	<td>Alex</td>
+</tr>
+<tr align=center>
+	<td>Dead & Company</td>
+	<td>-</td>
+	<td>2025-04-25</td>
+	<td>The Sphere; Las Vegas, NV, US</td>
+	<td><a href="https://archive.org/details/deadco2025-04-25.stelladew" target="_blank">Yes</a></td>
+	<td>Alex, Dad, Eric, Jenni, and Sara</td>
+</tr>
+<tr align=center>
+	<td>Dead & Company</td>
+	<td>-</td>
+	<td>2025-04-26</td>
+	<td>The Sphere; Las Vegas, NV, US</td>
+	<td><a href="https://archive.org/details/deadco2025-04-26.stelladew" target="_blank">Yes</a></td>
+	<td>Alex, Dad, and Eric</td>
+</tr>
 </table>
 <br>
 </div>
