Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1987,6 +1987,46 @@
 	<td><a href="https://archive.org/details/deadco2025-04-26.stelladew" target="_blank">Yes</a></td>
 	<td>Alex, Dad, and Eric</td>
 </tr>
+<tr align=center>
+	<td>Grahame Lesh & Friends</td>
+	<td>-</td>
+	<td>2025-07-31</td>
+	<td>The Heart of Town, Pier 48; San Francisco, CA, US/td>
+	<td><a href="https://archive.org/details/glf2025-07-31.ck61" target="_blank">Yes</a></td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Dead & Company</td>
+	<td>Billy Strings</td>
+	<td>2025-08-01</td>
+	<td>Golden Gate Park; San Francisco, CA, US</td>
+	<td><a href="https://archive.org/details/deadco2025-08-01.mk2s" target="_blank">Yes</a></td>
+	<td>Alex and Ryland</td>
+</tr>
+<tr align=center>
+	<td>Melvin Seals and JGB</td>
+	<td>-</td>
+	<td>2025-08-02</td>
+	<td>Jerry Garcia Amphitheater, McLaren Park; San Francisco, CA, US</td>
+	<td><a href="https://archive.org/details/MelvinSeals2025-08-02" target="_blank">Yes</a></td>
+	<td>Alex and Sara</td>
+</tr>
+<tr align=center>
+	<td>Dead & Company</td>
+	<td>Sturgill “Johnny Blue Skies” Simpson</td>
+	<td>2025-08-02</td>
+	<td>Golden Gate Park; San Francisco, CA, US</td>
+	<td><a href="https://archive.org/details/deadco2025-08-01.mk2s" target="_blank">Yes</a></td>
+	<td>Alex, Joey, Ryland, and Sara</td>
+</tr>
+<tr align=center>
+	<td>Dead & Company</td>
+	<td>Trey Anastasio Band</td>
+	<td>2025-08-03</td>
+	<td>Golden Gate Park; San Francisco, CA, US</td>
+	<td><a href="https://archive.org/details/deadco2025-08-03.matrix" target="_blank">Yes</a></td>
+	<td>Alex and Ryland</td>
+</tr>
 </table>
 <br>
 </div>
