--- a/concerts/index.html
+++ b/concerts/index.html
@@ -1991,7 +1991,7 @@
 	<td>Grahame Lesh & Friends</td>
 	<td>-</td>
 	<td>2025-07-31</td>
-	<td>The Heart of Town, Pier 48; San Francisco, CA, US/td>
+	<td>The Heart of Town, Pier 48; San Francisco, CA, US</td>
 	<td><a href="https://archive.org/details/glf2025-07-31.ck61" target="_blank">Yes</a></td>
 	<td>-</td>
 </tr>
