--- a/concerts/index.html
+++ b/concerts/index.html
@@ -2016,7 +2016,7 @@
 	<td>Sturgill “Johnny Blue Skies” Simpson</td>
 	<td>2025-08-02</td>
 	<td>Golden Gate Park; San Francisco, CA, US</td>
-	<td><a href="https://archive.org/details/deadco2025-08-01.mk2s" target="_blank">Yes</a></td>
+	<td><a href="https://archive.org/details/deadco2025-08-02.mk4" target="_blank">Yes</a></td>
 	<td>Alex, Joey, Ryland, and Sara</td>
 </tr>
 <tr align=center>
