Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -2027,6 +2027,14 @@
 	<td><a href="https://archive.org/details/deadco2025-08-03.matrix" target="_blank">Yes</a></td>
 	<td>Alex and Ryland</td>
 </tr>
+<tr align=center>
+	<td>Peter Rowan with Sam Grisman Project</td>
+	<td>-</td>
+	<td>2025-10-05</td>
+	<td>Hardly Strictly Bluegrass, Golden Gate Park; San Francisco, CA, US</td>
+	<td>No</td>
+	<td>Sara</td>
+</tr>
 </table>
 <br>
 </div>
