Updated record and concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -2035,6 +2035,14 @@
 	<td>No</td>
 	<td>Sara</td>
 </tr>
+<tr align=center>
+	<td>Alex Jordan & Friends</td>
+	<td>-</td>
+	<td>2025-10-31</td>
+	<td>Fox Theatre; Redwood City, CA, US</td>
+	<td>No</td>
+	<td>Sara</td>
+</tr>
 </table>
 <br>
 </div>
