--- a/records/index.html
+++ b/records/index.html
@@ -935,6 +935,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>Johnny Cash</td>
+	<td>Johnny Cash Sings the Ballads of the True West</td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>Double LP</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Johnny Hodges with Leon Thomas and Oliver Nelson</td>
 	<td>3 Shades of Blue</td>
 	<td>12 Inch</td>
@@ -2223,6 +2231,14 @@
 	<td>-</td>
 </tr>
 <tr align=center>
+	<td>The Smashing Pumpkins</td>
+	<td><a href="https://www.discogs.com/release/35019116-The-Smashing-Pumpkins-Machina">Machina - Aranea Alba Editio</a></td>
+	<td>12 Inch</td>
+	<td>Black</td>
+	<td>8 LP Box Set</td>
+	<td>-</td>
+</tr>
+<tr align=center>
 	<td>Soft Verdict</td>
 	<td>Vergessen</td>
 	<td>12 Inch</td>
@@ -2553,9 +2569,9 @@
 </table>
 <br>
 <div id="text">
-Total: 316
+Total: 318
 <br>
-Last Updated: 2024-09-22
+Last Updated: 2025-11-08
 <br>
 </div>
 
