Updated concert list and homepage

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -2043,6 +2043,38 @@
 	<td>No</td>
 	<td>Sara</td>
 </tr>
+<tr align=center>
+	<td>Mason's Children (partial set)</td>
+	<td>-</td>
+	<td>2026-01-11</td>
+	<td>Psychedelic SF Art Gallery; San Francisco, CA, US</td>
+	<td>No</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Papa M</td>
+	<td>Ryley Walker</td>
+	<td>2026-01-15</td>
+	<td>The Chapel; San Francisco, CA, US</td>
+	<td>No</td>
+	<td>Fiona, Nathan, and Sara</td>
+</tr>
+<tr align=center>
+	<td>John Mayer (Homecoming: Celebrating the Life of Bobby Weir)</td>
+	<td>-</td>
+	<td>2026-01-17</td>
+	<td>Civic Center Plaza; San Francisco, CA, US</td>
+	<td>No</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Grahame Lesh & Friends (Howling Wolves: A Tribute To Bobby Weir)</td>
+	<td>-</td>
+	<td>2026-01-17</td>
+	<td>The Warfield Theatre; San Francisco, CA, US</td>
+	<td>No</td>
+	<td>-</td>
+</tr>
 </table>
 <br>
 </div>
