Updated concert list

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -2075,6 +2075,30 @@
 	<td>No</td>
 	<td>-</td>
 </tr>
+<tr align=center>
+	<td>Dark Star Orchestra</td>
+	<td>-</td>
+	<td>2026-02-06</td>
+	<td>The Fox Theater; Oakland, CA, US</td>
+	<td>No</td>
+	<td>Sara</td>
+</tr>
+<tr align=center>
+	<td>Ramble on Haight (Featuring Grahame Lesh) </td>
+	<td>-</td>
+	<td>2026-02-07</td>
+	<td>Outside of Love on Haight (Haight St & Masonic Ave); San Francisco, CA, US</td>
+	<td>No</td>
+	<td>-</td>
+</tr>
+<tr align=center>
+	<td>Dark Star Orchestra</td>
+	<td>-</td>
+	<td>2026-02-07</td>
+	<td>The Fox Theater; Oakland, CA, US</td>
+	<td>No</td>
+	<td>-</td>
+</tr>
 </table>
 <br>
 </div>
